Sat Jul 14 22:53:32 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkchequer.[ch]: Add quick rollout buttons

Sat Jul 14 22:50:07 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* export.c, import.c: Fix two Jellyfish MAT format bugs. One import and
	one export.

Sat Jul 14 22:47:19 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, set.c: Fix a couple of set sound options.

Sat Jul 14 22:41:22 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.w32, Makefile.am, bearoffdump.c, getopt*, makebearoff.c,
	makebearoff1.c, makehyper.c, tctutorial.h, lib/Makefile.am,
	lib/hashtest.c, lib/md5test.c: Code clean, remove unused test programs and
	getopt.

Wed Jul 11 15:37:49 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.w32: Delete a few unused files
	* eval.c: Fix startup bug when gnubg.wd was missing

Tue Jul 10 17:22:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* set.c, show.c, gnubg.c: Fix a language setting problem

Tue Jul 10 10:42:39 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* progress.c, rollout.c: Fix counting bug in multithreaded code for cube
	rollouts. Revert changes in progress.c so that the displayed number of
	games i correct for both non-threaded and multi-threaded code.

Wed Jul  4 00:01:48 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* : Updated GNU Backgammon to use GPL version 3. Achim did the work.
	I'm removing a few obsoleted and autotools related files.

Sun Jul  1 13:05:02 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkprefs.c: fix bug with default board designs not being loaded

Thu Jun 28 21:20:45 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* import.c: Fix TMG post-Crawford import bug

Mon Jun 11 20:54:35 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* boardpos.c, copying.awk, corecount.c, credits.sh, erf.c, erftest.c,
	external_l.l, getopt.c, getopt1.c, gnubgmodule.h, gtk-multiview.c,
	gtkboard.c, gtkchequer.c, gtkcolour.c, gtkcube.c, gtkexport.c,